correct letter spacing on nav

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -280,13 +280,11 @@ textarea {
     font-weight: 800;
     font-size: 1.5em;
     text-transform: uppercase;
-    color: red;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
-    letter-spacing: 3px;
     .nav-top-left{
         width: 33.3333%;
         height: 58px;
@@ -363,7 +361,6 @@ textarea {
     -o-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
-    letter-spacing: 3px;
     .nav-left{
         width: 50%;
         height: 58px;
